update to domain path to redirect

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ POSTGRES_DATABASE="verceldb"
 
 # `openssl rand -base64 32`
 AUTH_SECRET=7eq24o4tGLgkss7gwbmpCg73rwe0dQPBHjbo6/GG8+M=
-AUTH_URL=http://localhost:3000/api/auth
+AUTH_URL=https://my-dashboard-nextjs-five.vercel.app/api/auth
